--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/message.css">
 	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
 	<div data-role="page" data-add-back-btn="true" class="app">
 		<div data-role="header" data-position="fixed">
 			<h1>Family Hub</h1>
-			<a href="#" data-icon="bars" class="ui-btn-right">Options</a>
+			<a href="#" data-icon="bars" class="ui-btn-right" data-iconpos="notext"></a>
 		</div>
 		<div data-role="content">
-			<div class="message">Ok can't wait to see you home! :)</div>
-			<div class="message">Did you get home safely?</div>
-			<div class="message message-you"><img src="images/ok.gif"></div>
+        	<div class="message-rows">
+        		<div class="row received">
+    				<div class="triangle"></div>
+    				<div class="message">Ok can't wait to see you home! :)</div>
+    			</div>
+    			<div class="row received">
+    				<div class="triangle"></div>
+    				<div class="message">Did you get home safely? Reply back soon okay?</div>
+    			</div>
+    			<div class="row sent">
+    				<div class="triangle"></div>
+    				<div class="message"><img src="images/ok.gif"></div>
+    			</div>
+        	</div>
 			<div data-position="fixed" class="actions">
 				<a href="#" data-role="button" data-icon="star" data-iconpos="notext" data-theme="c" id="share"></a>
 				<input type="text" name="message" value="" id="message">
@@ -26,5 +39,4 @@
 	</div>
 </body>
 </html> 
-
 
