--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 		<div data-role="content">
         	<div class="message-rows">
         		<div class="row received">
+        			<div class="face"><img src="images/no-face.jpg"></div>
     				<div class="triangle"></div>
     				<div class="message">Ok can't wait to see you home! :)</div>
     			</div>
     			<div class="row received">
+    				<div class="face"><img src="images/no-face.jpg"></div>
     				<div class="triangle"></div>
     				<div class="message">Did you get home safely? Reply back soon okay?</div>
     			</div>
