prettier bottom bar

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     			</div>
         	</div>
 			<div data-position="fixed" class="actions">
-				<a href="#" data-role="button" data-icon="star" data-iconpos="notext" data-theme="c" id="share"></a>
+				<a href="#" data-role="button" data-iconpos="notext" data-theme="a" id="share"></a>
 				<input type="text" name="message" value="" id="message">
-    			<a href="#" data-role="button" data-theme="c" id="ok">OK</a>
+    			<a href="#" data-role="button" data-iconpos="notext" data-theme="a" id="ok"></a>
 			</div>
 		</div>
 	</div>
