--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 	<div data-role="page" data-add-back-btn="true" class="app">
 		<div data-role="header" data-position="fixed">
-			<h1>Family Hub</h1>
-			<a href="#" data-icon="bars" class="ui-btn-right" data-iconpos="notext"></a>
+			<h1 id="name">Jimmy</h1>
+			<a href="#" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a>
 		</div>
 		<div data-role="content">
         	<div class="message-rows">
