--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/base.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/message.css">
 	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
@@ -11,7 +12,7 @@
 </head>
 <body>
 	<div data-role="page" data-add-back-btn="true" class="app">
-		<div data-role="header" data-position="fixed">
+		<div id="header" data-role="header" data-position="fixed">
 			<h1 id="name">Jimmy</h1>
 			<a href="#" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a>
 		</div>
