--- a/schedule.html
+++ b/schedule.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/base.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/schedule.css">
 	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
@@ -12,8 +13,9 @@
 </head>
 <body>
 	<div data-role="page" data-add-back-btn="true" class="app">
-		<div id="header" data-role="header" data-position="fixed">
-			<h1 id="name">Schedule a Call</h1>
+		<div id="header">
+			<div class="back-btn">Back </div>
+			<div class="title">Schedule a Call</div>
 		</div>
 		<div data-role="content">
 			<div id="left-col"> 
