2 version of headers, jqm and fixed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
     	</div>
 
-		<div id="header" data-role="header" data-position="fixed">
+		<div id="jqm-header" data-role="header" data-position="fixed">
 			<h1 id="name">Mom</h1>
 			<a href="#" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a>
 		</div>
