--- a/schedule.html
+++ b/schedule.html
@@ -17,7 +17,7 @@
 			<div class="back-btn">Back </div>
 			<div class="title">Schedule a Call</div>
 		</div>
-		<div data-role="content">
+		<div data-role="content" class="custom-header-with-content">
 			<div id="left-col"> 
 				<div class="time">11am</div>
 				<div class="time">12pm</div>
