--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 		<div id="jqm-header" data-role="header" data-position="fixed">
 			<h1 id="name">Mom</h1>
-			<a href="#" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a>
+			<a href="#" data-theme="b" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a>
 		</div>
-		<div data-role="content">
+		<div id="content" data-role="content">
         	<div class="message-rows">
         		<div class="row received">
         			<div class="face"><img src="images/no-face.jpg"></div>
@@ -51,10 +51,10 @@
     			</div>
         	</div>
 		</div>
-		<div data-role="footer" data-position="fixed" class="actions">
-			<a href="#" data-role="button" data-iconpos="notext" data-theme="a" id="share"></a>
+		<div id="jqm-footer" data-role="footer" data-position="fixed" class="actions">
+			<a href="#" class="footer-btn" data-role="button" data-iconpos="notext" data-theme="a" id="share"></a>
 			<input type="text" name="message" value="" id="message">
-			<a href="#" data-role="button" data-iconpos="notext" data-theme="a" id="ok"></a>
+			<a href="#" class="footer-btn" data-role="button" data-iconpos="notext" data-theme="a" id="ok"></a>
 		</div>
 
 	</div>
