--- a/stitches.html
+++ b/stitches.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/stitches.css">
 	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.js"></script>
-	<script type="text/javascript" src="js/stitches.js"></script>
+	<script type="text/javascript" src="js/stitch.js"></script>
 
 </head>
 <body>
@@ -21,8 +21,7 @@
 		</div>
 		<div data-role="content" class="custom-header-with-content">
 			<div id="footer">
-				<div class="note">Pick a time to speak.</div>
-				<div class="call"><div class="btn btn-info">Schedule Call</div></div>
+				<div class="note">Click on a stitch to view</div>
 			</div>
 		</div>
 	</div>
