--- a/stitches.html
+++ b/stitches.html
@@ -13,17 +13,24 @@
 
 </head>
 <body>
-	<div data-role="page" data-add-back-btn="true" class="app">
+	<div id="stitches" data-role="page" data-add-back-btn="true" class="app">
 		<div id="header">
 			<div class="back-btn">Back </div>
 			<div class="title">Stitches</div>
 			<div class="right-nav">New Stitch</div>
 		</div>
-		<div data-role="content" class="custom-header-with-content">
-			<div id="footer">
-				<div class="note">Click on a stitch to view</div>
-			</div>
+        <div class="content">
+        </div>
+	</div>
+    
+    <div id="new_stitch" data-role="page" data-add-back-btn="true" class="app">
+		<div id="header">
+			<div class="back-btn">Back </div>
+			<div class="title">Stitches</div>
+			<div class="right-nav">New Stitch</div>
 		</div>
+        <div class="content">
+        </div>
 	</div>
 </body>
 </html> 
