--- a/stitches.html
+++ b/stitches.html
@@ -23,13 +23,27 @@
         </div>
 	</div>
     
-    <div id="new_stitch" data-role="page" data-add-back-btn="true" class="app">
+    <div id="choose_pictures" data-role="page" data-add-back-btn="true" class="app">
 		<div id="header">
 			<div class="back-btn">Back </div>
-			<div class="title">Stitches</div>
-			<div class="right-nav">New Stitch</div>
+			<div class="title">Choose Pictures</div>
+			<div class="right-nav">Next</div>
 		</div>
         <div class="content">
+        	<p> Select the photos you want to show in your new stitch </p>
+        	<div id="images">
+        		<img src = "images/image1" height="200px" width="200px">
+        		<img src = "images/image2" height="200px" width="200px">
+        		<img src = "images/image3" height="200px" width="200px">
+        		</br>
+        		<img src = "images/image4" height="200px" width="200px">
+        		<img src = "images/image5" height="200px" width="200px">
+        		<img src = "images/image6" height="200px" width="200px">
+        		</br>
+        		<img src = "images/image7" height="200px" width="200px">
+        		<img src = "images/image8" height="200px" width="200px">
+        		<img src = "images/image9" height="200px" width="200px">
+        	</div>
         </div>
 	</div>
 </body>
