--- a/stitches.html
+++ b/stitches.html
@@ -5,7 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/base.css">
-<!-- 	<link rel="stylesheet" type="text/css" href="stylesheets/schedule.css"> -->
 	<link rel="stylesheet" type="text/css" href="stylesheets/stitches.css">
 	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.js"></script>
@@ -17,20 +16,22 @@
 		<div id="header">
 			<div class="back-btn">Back </div>
 			<div class="title">Stitches</div>
-			<div class="right-nav">New Stitch</div>
+            <div id="stitches_next" class="right-nav">New Stitch</div>
 		</div>
-        <div class="content">
-        </div>
+		<div data-role="content" class="custom-header-with-content">
+			
+		</div>
 	</div>
     
-    <div id="new_stitch" data-role="page" data-add-back-btn="true" class="app">
+    <div id="choose_pictures" data-role="page" data-add-back-btn="true" class="app">
 		<div id="header">
-			<div class="back-btn">Back </div>
-			<div class="title">Stitches</div>
-			<div class="right-nav">New Stitch</div>
+			<div id="choose_back" class="back-btn">Back </div>
+			<div class="title">Choose Pictures</div>
+            <div id="choose_next" class="right-nav">New Stitch</div>
 		</div>
-        <div class="content">
-        </div>
+		<div data-role="content" class="custom-header-with-content">
+			
+		</div>
 	</div>
 </body>
 </html> 
