placeholder images for pics

--- a/stitches.html
+++ b/stitches.html
@@ -30,35 +30,18 @@
             <div id="choose_next" class="right-nav">New Stitch</div>
 		</div>
 		<div data-role="content" class="custom-header-with-content">
-<<<<<<< HEAD
-=======
-			
-		</div>
-			<div class="back-btn">Back </div>
-			<div class="title">Choose Pictures</div>
-			<div class="right-nav">Next</div>
-		</div>
->>>>>>> a1d272d6c049a96d5442d938d97b6b65f565bbbf
-        <div class="content">
         	<p> Select the photos you want to show in your new stitch </p>
         	<div id="images">
-        		<img src = "images/image1" height="200px" width="200px">
-        		<img src = "images/image2" height="200px" width="200px">
-        		<img src = "images/image3" height="200px" width="200px">
+        		<img src = "http://placehold.it/250x250">
+        		<img src = "http://placehold.it/250x250">
         		</br>
-        		<img src = "images/image4" height="200px" width="200px">
-        		<img src = "images/image5" height="200px" width="200px">
-        		<img src = "images/image6" height="200px" width="200px">
+        		<img src = "http://placehold.it/250x250">
+        		<img src = "http://placehold.it/250x250">
         		</br>
-        		<img src = "images/image7" height="200px" width="200px">
-        		<img src = "images/image8" height="200px" width="200px">
-        		<img src = "images/image9" height="200px" width="200px">
+        		<img src = "http://placehold.it/250x250">
+        		<img src = "http://placehold.it/250x250">
         	</div>
         </div>
-<<<<<<< HEAD
-=======
-
->>>>>>> a1d272d6c049a96d5442d938d97b6b65f565bbbf
 	</div>
 </body>
 </html> 
