finished first draft choose pics

--- a/stitches.html
+++ b/stitches.html
@@ -30,7 +30,9 @@
             <div id="choose_next" class="right-nav">New Stitch</div>
 		</div>
 		<div data-role="content" class="custom-header-with-content">
-        	<p> Select the photos you want to show in your new stitch </p>
+        	<div class="page-header">
+ 			 <h1 id = "select_message"></br><small>Select which photos to show in your stitch</small></h1>
+ 			</div>
         	<div id="images">
         		<img src = "http://placehold.it/250x250">
         		<img src = "http://placehold.it/250x250">
