completed stitches page

--- a/stitches.html
+++ b/stitches.html
@@ -18,9 +18,40 @@
 			<div class="title">Stitches</div>
             <div id="stitches_next" class="right-nav">New Stitch</div>
 		</div>
-		<div data-role="content" class="custom-header-with-content">
-			
-		</div>
+        <div data-role="content" class="custom-header-with-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-9">
+                        <h3>Tahoe Vacation</h3>
+                        Created by: Jimmy<br>
+                        Uploaded: Yesterday<br>
+                    </div>
+                    <div class="col-xs-3">
+                        <img src="images/play.jpg" height="75px" width="75px">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-9">
+                        <h3>Santa Cruz Retreat</h3>
+                        Created by: Me<br>
+                        Uploaded: 10/01/13<br>
+                    </div>
+                    <div class="col-xs-3">
+                        <img src="images/play.jpg" height="75px" width="75px">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-9">
+                        <h3>High School Senior Year</h3>
+                        Created by: Samantha<br>
+                        Uploaded: 8/21/13<br>
+                    </div>
+                    <div class="col-xs-3">
+                        <img src="images/play.jpg" height="75px" width="75px">
+                    </div>
+                </div>
+            </div>
+        </div>
 	</div>
     
     <div id="choose_pictures" data-role="page" data-add-back-btn="true" class="app">
@@ -31,11 +62,6 @@
 		</div>
 		<div data-role="content" class="custom-header-with-content">
 			
-		</div>
-			<div class="back-btn">Back </div>
-			<div class="title">Choose Pictures</div>
-			<div class="right-nav">Next</div>
-		</div>
         <div class="content">
         	<p> Select the photos you want to show in your new stitch </p>
         	<div id="images">
