not sure what changed

--- a/stitches.html
+++ b/stitches.html
@@ -58,24 +58,23 @@
 		<div id="header">
 			<div id="choose_back" class="back-btn">Back </div>
 			<div class="title">Choose Pictures</div>
-            <div id="choose_next" class="right-nav">New Stitch</div>
+            <div id="choose_next" class="right-nav">Next</div>
 		</div>
 		
 			
         <div class="content">
-        	<p> Select the photos you want to show in your new stitch </p>
         	<div class="page-header">
  			 <h1 id = "select_message"></br><small>Select which photos to show in your stitch</small></h1>
  			</div>
         	<div id="images">
-        		<img src = "http://placehold.it/250x250">
-        		<img src = "http://placehold.it/250x250">
+        		<img src = "http://placehold.it/250x250" class="pic">
+        		<img src = "http://placehold.it/250x250" class="pic">
         		</br>
-        		<img src = "http://placehold.it/250x250">
-        		<img src = "http://placehold.it/250x250">
+        		<img src = "http://placehold.it/250x250" class="pic">
+        		<img src = "http://placehold.it/250x250" class="pic">
         		</br>
-        		<img src = "http://placehold.it/250x250">
-        		<img src = "http://placehold.it/250x250">
+        		<img src = "http://placehold.it/250x250" class="pic">
+        		<img src = "http://placehold.it/250x250" class="pic">
         	</div>
         </div>
 	</div>
