added set_title_and_music page

--- a/stitches.html
+++ b/stitches.html
@@ -101,6 +101,37 @@
                 </div>
             </div>
         </div>
+
+
+
+
+
+
+    <div id="set_title_and_music" data-role="page" data-add-back-btn="true" class="app">
+        <div id="header">
+            <div id="set_title_back" class="back-btn">Back </div>
+            <div class="title">Set Title and Music</div>
+            <div id="set_title_next" class="right-nav">Next</div>
+        </div>
+        
+        <div class="content">
+            </br>
+            </br>
+            <h4>Stitch Title:</h4>
+            <div class="input-group input-group-lg">
+                <input type="text" class="form-control" placeholder="Title">
+            </div>
+            <h4>Choose Background Music:</h4>
+            <h5>Recently Used Tracks:</h5>
+            <form>
+                <input type="radio" name="song" value="first">Song1<br>
+                <input type="radio" name="song" value="second">Song2</br>
+                <input type="radio" name="song" value="third">Song3<br>
+                <input type="radio" name="song" value="fourth">Song4
+            </form>
+        </div>
+
+
 </body>
 </html> 
 
