fixed missing div

--- a/stitches.html
+++ b/stitches.html
@@ -116,9 +116,10 @@
             <div class="page-header">
                 <h1 id = "select_message"></br><small>As you record, swipe for the next photo</small></h1>
             </div>
-        <div id="images">
-            <img src = "http://placehold.it/400x400"><br><br>
-            <img src = "images/pause.png" height="50px" width="50px">
+            <div id="images">
+                <img src = "http://placehold.it/400x400"><br><br>
+                <img src = "images/pause.png" height="50px" width="50px">
+            </div>
         </div>
     </div>
 
