--- a/stitches.html
+++ b/stitches.html
@@ -135,7 +135,7 @@
             </br>
             </br>
             <h4>Stitch Title:</h4>
-            <div class="input-group input-group-lg">
+            <div class="input-group">
                 <input type="text" class="form-control" placeholder="Title">
             </div>
             <h4>Choose Background Music:</h4>
@@ -146,6 +146,7 @@
                 <input type="radio" name="song" value="third">Song3<br>
                 <input type="radio" name="song" value="fourth">Song4
             </form>
+
         </div>
     </div>        
 
