finished first draft of all

--- a/stitches.html
+++ b/stitches.html
@@ -138,7 +138,10 @@
             <h4>Stitch Title:</h4>
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Title">
-                    </div>
+            </div>
+            </br>
+            </br>
+            </br>
             <h4>Choose Background Music:</h4>
             <h5>Recently Used Tracks:</h5>
             <form>
@@ -147,7 +150,9 @@
                 <input type="radio" name="song" value="third">Song3<br>
                 <input type="radio" name="song" value="fourth">Song4
             </form>
-
+            </br>
+            </br>
+            <h6> <u> Choose from your music library </u></h6>
         </div>
     </div>
 
