--- a/stitches.html
+++ b/stitches.html
@@ -3,13 +3,16 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.css">
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/base.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/stitches.css">
+        
 	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/stitch.js"></script>
-
+   
 </head>
 <body>
 	<div id="stitches" data-role="page" data-add-back-btn="true" class="app">
@@ -91,16 +94,12 @@
         	<div class="page-header">
                 <h1 id = "select_message"></br><small>Drag and drop pictures in the order you want them to show in the stitch</small></h1>
  			</div>
-        	<div id="images">
-        		<img src = "http://placehold.it/250x250">
-                <img src = "http://placehold.it/250x250">
-                </br>
-                <img src = "http://placehold.it/250x250">
-                <img src = "http://placehold.it/250x250">
-                </br>
-                <img src = "http://placehold.it/250x250">
-                <img src = "http://placehold.it/250x250">
-            </div>
+        	<ul id="sortable">
+                <li class="ui-state-default"><img src = "http://placehold.it/100x100" class="pic"></li>
+                <li class="ui-state-default"><img src = "http://placehold.it/100x100" class="pic"></li>
+                <li class="ui-state-default"><img src = "http://placehold.it/100x100" class="pic"></li>
+                <li class="ui-state-default"><img src = "http://placehold.it/100x100" class="pic"></li>
+            </ul>
         </div>
     </div>
 
