--- a/stitches.html
+++ b/stitches.html
@@ -128,31 +128,39 @@
     <div id="set_title_and_music" data-role="page" data-add-back-btn="true" class="app">
         <div id="header">
             <div id="set_title_back" class="back-btn">Back </div>
-            <div class="title">Set Title and Music</div>
+            <div class="title">Set Background Music</div>
             <div id="set_title_next" class="right-nav">Next</div>
         </div>
-        
+        </br>
+        </br>
         <div class="content">
-            </br>
-            </br>
-            <h4>Stitch Title:</h4>
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Title">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h5>Tahoe Vacation</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h5>Tahoe Vacation</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h5>Tahoe Vacation</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h5>Tahoe Vacation</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h5>Tahoe Vacation</h5>
+                    </div>
+                </div>
             </div>
-            </br>
-            </br>
-            </br>
-            <h4>Choose Background Music:</h4>
-            <h5>Recently Used Tracks:</h5>
-            <form>
-                <input type="radio" name="song" value="first"> Song1<br>
-                <input type="radio" name="song" value="second"> Song2</br>
-                <input type="radio" name="song" value="third"> Song3<br>
-                <input type="radio" name="song" value="fourth"> Song4
-            </form>
-            </br>
-            </br>
-            <h6> <u> Choose from your music library </u></h6>
         </div>
     </div>
 
@@ -164,8 +172,15 @@
         </div>
             
         <div class="content">
+            </br>
+            </br>
+            </br>
+            <div id = "stitch_title" class="input-group">
+                <input type="text" class="form-control" placeholder="Untitled">
+            </div>
+            </br>
             <div id="images">
-                <img src = "http://placehold.it/400x400"><br><br>
+                <img src = "http://placehold.it/350x350"><br><br>
                 <img src = "images/play.jpg" height="75px" width="75px">
             </div>
         </div>
