added profile images

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 		<div id="content" data-role="content">
         	<div class="message-rows">
         		<div class="row received">
-        			<div class="face"><img src="images/no-face.jpg"></div>
+        			<div class="face"></div>
     				<div class="triangle"></div>
     				<div class="message">Ok can't wait to see you home! :)</div>
     			</div>
     			<div class="row received">
-    				<div class="face"><img class="ok-img" src="images/no-face.jpg"></div>
+    				<div class="face"></div>
     				<div class="triangle"></div>
     				<div class="message">Did you get home safely? Reply back soon okay?</div>
     			</div>
