scheduling done except for confirmation message + notifcation

--- a/schedule.html
+++ b/schedule.html
@@ -12,9 +12,9 @@
 
 </head>
 <body>
-	<div data-role="page" data-add-back-btn="true" class="app">
+	<div data-role="page" data-add-back-btn="true" class="app" id="schedule">
 		<div id="header">
-			<div class="back-btn">Back </div>
+			<div class="back-btn" id="">Back</div>
 			<div class="title">Schedule a Call</div>
 		</div>
 		<div data-role="content" class="custom-header-with-content">
@@ -37,7 +37,7 @@
 			</div>
 			<div id="footer">
 				<div class="note">Pick a time to speak.</div>
-				<div class="call"><div class="btn btn-info">Schedule Call</div></div>
+				<div class="call"><div class="btn btn-info" id="schedule-call">Schedule Call</div></div>
 			</div>
 		</div>
 	</div>
