fixed drag and drop

--- a/stitches.html
+++ b/stitches.html
@@ -68,23 +68,35 @@
 		
         <div class="content">
         	<div class="page-header">
- 			 <h1 id = "select_message"></br><small>Select which photos to show in your stitch</small></h1>
+ 			 <h2 id = "select_message"></br><small>Select which photos to show in your stitch</small></h2>
  			</div>
             <div class="container">
                 <div class="row" id="whiteborder">
-                    <div class="col-xs-6">
-                        <img src = "http://placehold.it/195x195">
+                    <div class="col-xs-3">
+                        <img src = "http://placehold.it/95x95">
                     </div>
-                    <div class="col-xs-6">
-                        <img src = "http://placehold.it/195x195">
+                    <div class="col-xs-3">
+                        <img src = "http://placehold.it/95x95">
                     </div>
-                </div>
-                <div class="row" id="noborder">
-                    <div class="col-xs-6">
-                        <img src = "http://placehold.it/195x195">
+                    <div class="col-xs-3">
+                        <img src = "http://placehold.it/95x95">
                             </div>
-                    <div class="col-xs-6">
-                        <img src = "http://placehold.it/195x195">
+                    <div class="col-xs-3">
+                        <img src = "http://placehold.it/95x95">
+                            </div>
+                </div>
+                <div class="row" id="whiteborder">
+                    <div class="col-xs-3">
+                        <img src = "http://placehold.it/95x95">
+                            </div>
+                    <div class="col-xs-3">
+                        <img src = "http://placehold.it/95x95">
+                            </div>
+                    <div class="col-xs-3">
+                        <img src = "http://placehold.it/95x95">
+                            </div>
+                    <div class="col-xs-3">
+                        <img src = "http://placehold.it/95x95">
                             </div>
                 </div>
             </div>
@@ -103,7 +115,7 @@
 		
         <div class="content">
         	<div class="page-header">
-                <h1 id = "select_message"></br><small>Drag and drop pictures in the order you want them to show in the stitch</small></h1>
+                <h2 id = "select_message"></br><small>Drag and drop pictures in the order you want them to show in the stitch</small></h2>
  			</div>
         	<ul id="sortable">
                 <li class="ui-state-default"><img src = "http://placehold.it/100x100" class="pic"></li>
@@ -124,7 +136,7 @@
         
         <div class="content">
             <div class="page-header">
-                <h1 id = "select_message"></br><small>As you record, swipe for the next photo</small></h1>
+                <h2 id = "select_message"></br><small>As you record, swipe for the next photo</small></h2>
             </div>
             <div id="images">
                 <img src = "http://placehold.it/350x350"><br><br>
