replaced placeholder images

--- a/stitches.html
+++ b/stitches.html
@@ -68,35 +68,35 @@
 		
         <div class="content">
         	<div class="page-header">
- 			 <h2 id = "select_message"></br><small>Select which photos to show in your stitch</small></h2>
+ 			 <h3 id = "select_message"></br><small>Select which photos to show in your stitch</small></h3>
  			</div>
             <div class="container">
                 <div class="row" id="whiteborder">
                     <div class="col-xs-3">
-                        <img src = "http://placehold.it/95x95">
+                        <img src="images/maui_1.jpg" height="95" width="95">
                     </div>
                     <div class="col-xs-3">
-                        <img src = "http://placehold.it/95x95">
+                        <img src="images/maui_2.jpg" height="95" width="95">
                     </div>
                     <div class="col-xs-3">
-                        <img src = "http://placehold.it/95x95">
+                        <img src="images/maui_3.jpg" height="95" width="95">
                             </div>
                     <div class="col-xs-3">
-                        <img src = "http://placehold.it/95x95">
+                        <img src="images/maui_4.jpg" height="95" width="95">
                             </div>
                 </div>
                 <div class="row" id="whiteborder">
                     <div class="col-xs-3">
-                        <img src = "http://placehold.it/95x95">
+                        <img src="images/maui_5.jpg" height="95" width="95">
                             </div>
                     <div class="col-xs-3">
-                        <img src = "http://placehold.it/95x95">
+                        <img src="images/maui_6.jpg" height="95" width="95">
                             </div>
                     <div class="col-xs-3">
-                        <img src = "http://placehold.it/95x95">
+                        <img src="images/maui_7.jpg" height="95" width="95">
                             </div>
                     <div class="col-xs-3">
-                        <img src = "http://placehold.it/95x95">
+                        <img src="images/maui_8.jpg" height="95" width="95">
                             </div>
                 </div>
             </div>
@@ -115,13 +115,13 @@
 		
         <div class="content">
         	<div class="page-header">
-                <h2 id = "select_message"></br><small>Drag and drop pictures in the order you want them to show in the stitch</small></h2>
+                <h3 id = "select_message"></br><small>Drag and drop pictures in the order you want them to show in the stitch</small></h3>
  			</div>
         	<ul id="sortable">
-                <li class="ui-state-default"><img src = "http://placehold.it/100x100" class="pic"></li>
-                <li class="ui-state-default"><img src = "http://placehold.it/100x100" class="pic"></li>
-                <li class="ui-state-default"><img src = "http://placehold.it/100x100" class="pic"></li>
-                <li class="ui-state-default"><img src = "http://placehold.it/100x100" class="pic"></li>
+                <li class="ui-state-default"><img src = "images/maui_1.jpg" height="100" width="100" class="pic"></li>
+                <li class="ui-state-default"><img src = "images/maui_2.jpg" height="100" width="100" class="pic"></li>
+                <li class="ui-state-default"><img src = "images/maui_3.jpg" height="100" width="100" class="pic"></li>
+                <li class="ui-state-default"><img src = "images/maui_5.jpg" height="100" width="100" class="pic"></li>
             </ul>
         </div>
     </div>
@@ -136,10 +136,10 @@
         
         <div class="content">
             <div class="page-header">
-                <h2 id = "select_message"></br><small>As you record, swipe for the next photo</small></h2>
+                <h3 id = "select_message"></br><small>As you record, swipe for the next photo</small></h3>
             </div>
             <div id="images">
-                <img src = "http://placehold.it/350x350"><br><br>
+                <img src="images/maui_1.jpg" height="350" width="350"><br><br>
                 <img src = "images/pause.png" height="50px" width="50px">
             </div>
         </div>
@@ -202,7 +202,7 @@
             </div>
             </br>
             <div id="images">
-                <img src = "http://placehold.it/350x350"><br><br>
+                <img src="images/maui_1.jpg" height="350" width="350"><br><br>
                 <img src = "images/play.jpg" height="75px" width="75px">
             </div>
         </div>
