replaced placeholder songs

--- a/stitches.html
+++ b/stitches.html
@@ -159,27 +159,27 @@
             <div class="container">
                 <div class="row" id = "border">
                     <div class="col-xs-12">
-                        <h5>Tahoe Vacation</h5>
+                        <h5>Gangsta's Paradise</h5>
                     </div>
                 </div>
                 <div class="row" id = "border">
                     <div class="col-xs-12">
-                        <h5>Tahoe Vacation</h5>
+                        <h5>Baby</h5>
                     </div>
                 </div>
                 <div class="row" id = "border">
                     <div class="col-xs-12">
-                        <h5>Tahoe Vacation</h5>
+                        <h5>Gangnam Style</h5>
                     </div>
                 </div>
                 <div class="row" id = "border">
                     <div class="col-xs-12">
-                        <h5>Tahoe Vacation</h5>
+                        <h5>Party in the U.S.A.</h5>
                     </div>
                 </div>
                 <div class="row" id = "border">
                     <div class="col-xs-12">
-                        <h5>Tahoe Vacation</h5>
+                        <h5>Bye Bye Bye</h5>
                     </div>
                 </div>
             </div>
