--- a/stitches.html
+++ b/stitches.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script src="js/jquery.ui.touch-punch.min.js"></script>
 	<script type="text/javascript" src="js/stitch.js"></script>
    
 </head>
