--- a/stitches.html
+++ b/stitches.html
@@ -74,30 +74,30 @@
             <div class="container">
                 <div class="row" id="whiteborder">
                     <div class="col-xs-3">
-                        <img src="images/maui_1.jpg" height="95" width="95">
+                        <img src="images/maui_1.jpg" height="95" width="95" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_2.jpg" height="95" width="95">
+                        <img src="images/maui_2.jpg" height="95" width="95" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_3.jpg" height="95" width="95">
+                        <img src="images/maui_3.jpg" height="95" width="95" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_4.jpg" height="95" width="95">
+                        <img src="images/maui_4.jpg" height="95" width="95" class = "faded">
                     </div>
                 </div>
                 <div class="row" id="whiteborder">
                     <div class="col-xs-3">
-                        <img src="images/maui_5.jpg" height="95" width="95">
+                        <img src="images/maui_5.jpg" height="95" width="95" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_6.jpg" height="95" width="95">
+                        <img src="images/maui_6.jpg" height="95" width="95" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_7.jpg" height="95" width="95">
+                        <img src="images/maui_7.jpg" height="95" width="95" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_8.jpg" height="95" width="95">
+                        <img src="images/maui_8.jpg" height="95" width="95" class = "faded">
                     </div>
                 </div>
             </div>
