--- a/stitches.html
+++ b/stitches.html
@@ -158,27 +158,27 @@
         </br>
         <div class="content">
             <div class="container">
-                <div class="row" id = "border">
+                <div class="song row" id = "border" class="song">
                     <div class="col-xs-12">
                         <h5>Gangsta's Paradise</h5>
                     </div>
                 </div>
-                <div class="row" id = "border">
+                <div class="song row" id = "border">
                     <div class="col-xs-12">
                         <h5>Baby</h5>
                     </div>
                 </div>
-                <div class="row" id = "border">
+                <div class="song row" id = "border">
                     <div class="col-xs-12">
                         <h5>Gangnam Style</h5>
                     </div>
                 </div>
-                <div class="row" id = "border">
+                <div class="song row" id = "border">
                     <div class="col-xs-12">
                         <h5>Party in the U.S.A.</h5>
                     </div>
                 </div>
-                <div class="row" id = "border">
+                <div class="song row" id = "border">
                     <div class="col-xs-12">
                         <h5>Bye Bye Bye</h5>
                     </div>
