--- a/home.html
+++ b/home.html
@@ -22,18 +22,22 @@
 			<div class="buttons">
 				<div class="self-button">Info</div>
 				<div class="self-button">Photos</div>
+				<a href="stitches.html" rel="external">
 				<div class="self-button">Stitches</div>
+				</a>
 			</div>
 		</div>
 		<div class="family-label">My Family</div>
 		<div class="family-list">
-			<div class="member">
-				<div class="member-photo"><img src="images/child.jpg"></div>
-				<div class="member-info">
-					<div class="member-name"><span>Dad</span></div>
-					<div class="member-status green">Available</div>
+			<a href="index.html" rel="external">
+				<div class="member">
+					<div class="member-photo"><img src="images/child.jpg"></div>
+					<div class="member-info">
+						<div class="member-name"><span>Dad</span></div>
+						<div class="member-status green">Available</div>
+					</div>
 				</div>
-			</div>
+			</a>
 			<div class="member">
 				<div class="member-photo"><img src="images/child.jpg"></div>
 				<div class="member-info">
