adding progress bar

--- a/stitches.html
+++ b/stitches.html
@@ -62,6 +62,15 @@
         </div>
         <div id="footer">
             <div id="stitches-back" class="back-btn">Back </div>
+            <div class="title">
+                <img src="images/black_dot.png">
+                <img src="images/grey_dot.png">
+                <img src="images/grey_dot.png">
+                <img src="images/grey_dot.png">
+                <img src="images/grey_dot.png">
+                <img src="images/grey_dot.png">
+                <img src="images/grey_dot.png">
+            </div>
             <div id="stitches_next" class="right-nav">New Stitch</div>
         </div>
 	</div>
@@ -111,6 +120,16 @@
         
         <div id="footer">
             <div id="choose_back" class="back-btn">Back </div>
+            <div class="title">
+                
+                <img src="images/grey_dot.png">
+                <img src="images/black_dot.png">
+                <img src="images/grey_dot.png">
+                <img src="images/grey_dot.png">
+                <img src="images/grey_dot.png">
+                <img src="images/grey_dot.png">
+                <img src="images/grey_dot.png">
+            </div>
             <div id="choose_next" class="right-nav">Next</div>
         </div>
 	</div>
