--- a/stitches.html
+++ b/stitches.html
@@ -88,30 +88,30 @@
             <div class="container">
                 <div class="row" id="whiteborder">
                     <div class="col-xs-3">
-                        <img src="images/maui_1.jpg" height="95" width="95" class = "faded">
+                        <img src="images/maui_1.jpg" height="90" width="90" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_2.jpg" height="95" width="95" class = "faded">
+                        <img src="images/maui_2.jpg" height="90" width="90" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_3.jpg" height="95" width="95" class = "faded">
+                        <img src="images/maui_3.jpg" height="90" width="90" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_4.jpg" height="95" width="95" class = "faded">
+                        <img src="images/maui_4.jpg" height="90" width="90" class = "faded">
                     </div>
                 </div>
                 <div class="row" id="whiteborder">
                     <div class="col-xs-3">
-                        <img src="images/maui_5.jpg" height="95" width="95" class = "faded">
+                        <img src="images/maui_5.jpg" height="90" width="90" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_6.jpg" height="95" width="95" class = "faded">
+                        <img src="images/maui_6.jpg" height="90" width="90" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_7.jpg" height="95" width="95" class = "faded">
+                        <img src="images/maui_7.jpg" height="90" width="90" class = "faded">
                     </div>
                     <div class="col-xs-3">
-                        <img src="images/maui_8.jpg" height="95" width="95" class = "faded">
+                        <img src="images/maui_8.jpg" height="90" width="90" class = "faded">
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
     <div id="reorder_pictures" data-role="page" data-add-back-btn="true" class="app">
 		<div id="header">
             <div class="back-btn"><img src="images/logo.png" height="20px"> </div>
-			<div class="title">Re-order Pictures</div>
+			<div class="title">Reorder Pictures</div>
 		</div>
 		
         <div class="content">
@@ -204,7 +204,7 @@
     <div id="set_title_and_music" data-role="page" data-add-back-btn="true" class="app">
         <div id="header">
             <div class="back-btn"><img src="images/logo.png" height="20px"> </div>
-            <div class="title">Set Background Music</div>
+            <div class="title">Set Music</div>
             
         </div>
         </br>
