--- a/stitches.html
+++ b/stitches.html
@@ -236,6 +236,11 @@
                         <h5>Bye Bye Bye</h5>
                     </div>
                 </div>
+                <div class="song row" id = "border">
+                    <div class="col-xs-12">
+                        <h5>Guap</h5>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="footer">
