--- a/stitches.html
+++ b/stitches.html
@@ -313,11 +313,11 @@
                 </div>
                 <div class="row family" id="border">
                     <div class="col-xs-3">
-                        <img src="images/mom.jpg" height="75px" width="75px" class="img-circle">
+                        <img src="images/child.jpg" height="75px" width="75px" class="img-circle">
                             
                             </div>
                     <div class="col-xs-9">
-                        <h3>Mom</h3>
+                        <h3>Jimmy</h3>
                     </div>
                 </div>
                 <div class="row family" id="border">
