--- a/chat.html
+++ b/chat.html
@@ -38,6 +38,7 @@
 		
 		<!-- main messages -->
 		<div id="jqm-header" data-role="header" data-position="fixed">
+			<span id="home" href="index.html" rel="external">Home</span>
 			<h1 id="name">Mom</h1>
 			<a href="#" data-theme="b" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a>
 		</div>
