--- a/chat.html
+++ b/chat.html
@@ -40,7 +40,8 @@
 		<div id="jqm-header" data-role="header" data-position="fixed">
 			<span id="home" href="index.html" rel="external">Home</span>
 			<h1 id="name">Mom</h1>
-			<a href="#" data-theme="b" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a>
+			<!-- <a href="#" data-theme="b" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a> -->
+			<span id="options">Options</span>
 		</div>
 		<div id="content" data-role="content">
         	<div class="message-rows">
