--- a/stitches.html
+++ b/stitches.html
@@ -18,9 +18,8 @@
 <body>
 	<div id="stitches" data-role="page" data-add-back-btn="true" class="app">
 		<div id="header">
-			<div class="back-btn"><img src="images/logo.png" height="20px"> </div>
+			<div class="back-btn"><a id="home" href="index.html" rel="external">Home</a></div>
 			<div class="title">Stitches</div>
-            
 		</div>
         
         <div data-role="content" class="custom-header-with-content">
