ok button with broken js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div data-role="page" data-add-back-btn="true" class="app" id="messages">
 		<div id="jqm-header" data-role="header" data-position="fixed">
-			<h1 id="name">FamilyHub</h1>
+			<h1 id="name" class="name-other">FamilyHub</h1>
 		</div>
 		<div class="profile">
 			<div class="self-info">
@@ -47,34 +47,24 @@
 					</div>
 				</div>
 			</a>
-			<div class="member">
-				<div class="member-photo"><img src="images/doge.jpg"></div>
-				<div class="member-info">
-					<div class="member-name"><span>Dog</span></div>
-					<div class="member-status">Busy: Chomping bones</div>
+			<a href="chat.html" rel="external">
+				<div class="member">
+					<div class="member-photo"><img src="images/brother.jpg"></div>
+					<div class="member-info">
+						<div class="member-name"><span>Andrew</span></div>
+						<div class="member-status">Busy: At work</div>
+					</div>
 				</div>
-			</div>
-			<div class="member">
-				<div class="member-photo"><img src="images/doge.jpg"></div>
-				<div class="member-info">
-					<div class="member-name"><span>Dog</span></div>
-					<div class="member-status">Busy: Chomping bones</div>
+			</a>
+			<a href="notify-ok.html" rel="external">
+				<div class="member">
+					<div class="member-photo"><img src="images/doge.jpg"></div>
+					<div class="member-info">
+						<div class="member-name"><span>Dog</span></div>
+						<div class="member-status">Busy: Chomping bones</div>
+					</div>
 				</div>
-			</div>
-			<div class="member">
-				<div class="member-photo"><img src="images/doge.jpg"></div>
-				<div class="member-info">
-					<div class="member-name"><span>Dog</span></div>
-					<div class="member-status">Busy: Chomping bones</div>
-				</div>
-			</div>
-			<div class="member">
-				<div class="member-photo"><img src="images/doge.jpg"></div>
-				<div class="member-info">
-					<div class="member-name"><span>Dog</span></div>
-					<div class="member-status">Busy: Chomping bones</div>
-				</div>
-			</div>
+			</a>
 		</div>
 	</div>
 </body>
