--- a/notify-call.html
+++ b/notify-call.html
@@ -6,8 +6,16 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/base.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/notify.css">
 </head>
-<body id="notification">
-	<div class="time">1:55</div>
-	<div class="notification">Notification: Call Jimmy in 5 minutes!</div>
+<body>
+	<div class="time">02:00</div>
+	<div class="notifications">
+		<div class="notification">
+			<div class="face child"></div>
+			<div class="message">
+				<div class="title">Reminder</div>
+				<div class="text">Phone call with Jimmy in 1 minute</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
