--- a/notify-ok.html
+++ b/notify-ok.html
@@ -6,8 +6,18 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/base.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/notify.css">
 </head>
-<body id="notification">
-	<div class="time">1:55</div>
-	<div class="notification">Notification: Call Jimmy in 5 minutes!</div>
+<body>
+	<div class="time">07:32</div>
+	<div class="notifications">
+		<a href="chat.html" rel="external">
+			<div class="notification">
+				<div class="face mom"></div>
+				<div class="message">
+					<div class="title">Mom</div>
+					<div class="text">Did you get home safely? Reply back soon okay?</div>
+				</div>
+			</div>
+		</a>
+	</div>
 </body>
 </html>
