--- a/chat.html
+++ b/chat.html
@@ -20,7 +20,7 @@
 		<div data-role="panel" id="options-panel" data-position="right" data-display="reveal" data-dismissible="true">
 			<div class="profile">
 				<div class="profile-img"></div>
-				<div class="name">Jimmy</div>
+				<div class="name-other">Jimmy</div>
 			</div>
 			<div class="status busy">Busy: In Class</div>
 			<div class="free-at">Free at 5:30pm</div>
@@ -42,7 +42,7 @@
 			<a href="#" data-theme="b" data-icon="bars" class="ui-btn-right" data-iconpos="notext" id="options"></a>
 		</div>
 		<div id="content" data-role="content">
-        	<div class="message-rows">
+        	<!-- <div class="message-rows">
         		<div class="row received">
         			<div class="face"></div>
     				<div class="triangle"></div>
@@ -53,7 +53,7 @@
     				<div class="triangle"></div>
     				<div class="message">Did you get home safely? Reply back soon okay?</div>
     			</div>
-        	</div>
+        	</div> -->
 		</div>
 		<div id="jqm-footer" data-role="footer" data-position="fixed" class="actions">
 			<a href="#" class="footer-btn" data-role="button" data-iconpos="notext" data-theme="a" id="share"></a>
