changed hompage photo and chat default text

--- a/chat.html
+++ b/chat.html
@@ -45,7 +45,7 @@
 		</div>
 		<div id="content" data-role="content">
         	<div class="message-rows">
-        		<div class="row received">
+        		<!-- <div class="row received">
         			<div class="face"></div>
     				<div class="triangle"></div>
     				<div class="message">Ok can't wait to see you home! :)</div>
@@ -54,7 +54,7 @@
     				<div class="face"></div>
     				<div class="triangle"></div>
     				<div class="message">Did you get home safely? Reply back soon okay?</div>
-    			</div>
+    			</div> -->
         	</div>
 		</div>
 		<div id="jqm-footer" data-role="footer" data-position="fixed" class="actions">
