--- a/stitches.html
+++ b/stitches.html
@@ -311,7 +311,7 @@
                         
                     </div>
                     <div class="col-xs-9">
-                        <h3>Johnny</h3>
+                        <h3>Andrew</h3>
                     </div>
                 </div>
                 <div class="row family" id="border">
